--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   padding: 3.5%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 1em;
-  color: white;
+  /*color: white;*/
 }
 
 a {
@@ -34,8 +34,8 @@ hr {
 }
 
 .frontaction {
-  text-overflow: ellipsis;
-  overflow: hidden;
+  /*text-overflow: ellipsis;
+  overflow: hidden;*/
 }
 
 .sendMessage {
