[update] changed UI with bootstrap

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,10 +1,10 @@
 <div class="container">
 
-  <p>Double Message is a personal relationship management tool that allows users to send emails and texts from the same platform.</p>
+  <p>Double Message is a personal relationship management tool that allows users to send emails and texts from the same platform. Includes a delayed message feature.</p>
 
   <p>The main goal of this project was to learn to utilize twilio and sendgrid.</p>
 
-  <p>Source: <a href="">URL</a></p>
+  <p>Source: <a href="https://github.com/HaminKo/double-message">https://github.com/HaminKo/double-message</a></p>
 
 
 </div>
