--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="container" style="margin-top: 36px">
+  <div class="container">
     {{{body}}}
   </div>
 
