--- a/views/editContact.hbs
+++ b/views/editContact.hbs
@@ -1,3 +1,10 @@
+{{#if error}}
+<div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only">Error:</span>
+  {{error}}
+</div>
+{{/if}}
 
 <form method="post">
   <div class="form-group">
