--- a/views/newMessage.hbs
+++ b/views/newMessage.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+<div class="container-fluid col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
 
 <form method="post">
 
